testcases/error/unknown_attribute.veryl
#[dummy_name]
module unknown_attribute {}
